Correctly align bulk action checkboxes when used in combination with tabledrag

--- a/styles/base/_form.scss
+++ b/styles/base/_form.scss
@@ -265,6 +265,11 @@ $maxWidth: 520px;
   }
 }
 
+// Correctly align bulk action checkboxes when used in combination with tabledrag
+table:has(.tabledrag-cell-content__item .form-checkbox) th.select-all .form-checkbox {
+  margin-left: calc(var(--tabledrag-handle-icon-size) + var(--space-m));
+}
+
 .form-boolean {
   &:hover, &:active {
     .gin--dark-mode & {
